--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
     <main>
         <!-- section HOME-book -->
         <section class="home-books">
-           <h1 class="home-title">Best Sellers Books</h1>
+           <h1 class="home-title">Best Sellers <span class="h1-accent">Books</span></h1>
            <div class="blocks-book">
             <h2 class="categor-book">Combined Print and E-Book Fiction</h2>
                <ul class="list-book">
