--- a/project.html
+++ b/project.html
@@ -13,16 +13,15 @@
            <h1 class="home-title">Best Sellers <span class="h1-accent">Books</span></h1>
            <div class="blocks-book">
             <h2 class="categor-book">Combined Print and E-Book Fiction</h2>
-               <ul class="list-book">
-                   <li class="card-book">
-                      <img src="./images/Rectangle 13.png" alt="">
+                    <li class="card-book">
+                        <a class="book-link" href=""></a>
+                      <img class="book-image" src="./images/Rectangle 13.png" alt="" width="330" height="485">
                       <div class="book-content">
                         <h3 class="book-title">I will find you</h3>
                         <p class="book-author">Harlan Coben</p>
                       </div>
                    </li>
-               </ul>
-               <button type="button" class="btn-see-more">See more</button>
+            <button type="button" class="btn-see-more">See more</button>
            </div>
         </section>
     </main>
