--- a/footer.html
+++ b/footer.html
@@ -1,22 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>Modul 9 task-2</title>
-</head>
-<body>
-    <p><a href="index.html">Go back</a></p>
-      <form class="feedback-form" autocomplete="off">
-        <label>
-          Email
-          <input type="email" name="email" autofocus />
-        </label>
-        
-        <button type="submit">Submit</button>
-      </form>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bookshelf</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+      rel="stylesheet"
+    />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./css/footer.css" />
+  </head>
+  <body>
+    <load src="partials/header.html" />
+    <main class="main-container container">
+      <aside class="main-sidebar">
+        <load src="partials/category-list.html" />
+        <load src="partials/donation-list.html" />
+      </aside>
+      <div class="main-content">
+        <h2 class="main-title">Best Sellers <span>Books</span></h2>
+        <div class="category-list-wrapper"></div>
+        <!-- ============================ -->
+<button class="button-up" type="button"><svg class="menu-open-btn-icon" width="24" height="24">
+  <use href="./img/icons.svg#icon-material-symbols_arrow-back-ios-rounded"></use>
+</svg></button>
+      </div>
+    </main>
+    <!-- <footer class="container"></footer> -->
+    <footer class="footer">
+      <div class="container footer-container">
+        <div class="container-footer-logo">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="logo-accent-foot">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-container-svg">
+          <p class="social-media">Social media</p>
+          <ul class="footer-link-list">
+            <li class="foot-svg-list">
+              <a
+                class="footer-link"
+                href=""
+                target="_blank"
+                rel="noopener no-referrer"
+              >
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagramsvg"></use></svg
+              ></a>
+            </li>
+            <li class="foot-svg-list">
+              <a
+                class="footer-link"
+                href=""
+                target="_blank"
+                rel="noopener no-referrer"
+              >
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twittersvg"></use></svg
+              ></a>
+            </li>
+            <li class="foot-svg-list">
+              <a
+                class="footer-link"
+                href=""
+                target="_blank"
+                rel="noopener no-referrer"
+              >
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebooksvg"></use></svg
+              ></a>
+            </li>
+            <li class="foot-svg-list">
+              <a
+                class="footer-link"
+                href=""
+                target="_blank"
+                rel="noopener no-referrer"
+              >
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedinsvg"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-item">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-label">
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </label>
+            <button type="submit" class="footer-button button">
+              Subscribe
+              <svg class="footer-telegram" width="24" height="24">
+                <use href="./images/icons.svg#telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+      </div>
+    </footer>
+    <script type="module" src="./main.js"></script>
     <script src="./js/footer.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>  
-</body>
+  </body>
 </html>
