--- a/index.html
+++ b/index.html
@@ -11,3 +11,24 @@
     <script src="./js/task-5.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+<div class="footer-form-div">
+    <p class="footer-form-text">Subscribe</p>
+    <form class="footer-form">
+      <label class="footer-label">
+        <input
+          type="email"
+          name="footer-email"
+          placeholder="E-mail"
+          class="footer-input"
+        />
+      </label>
+      <button type="submit" class="footer-form-btn button">Subscribe</button>
+    </form>
+  </div>
